# TTS

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  all_sources.md  chatgpt.cmd  dev-requirements.txt  download_qwen3_models.py.py  pyproject.toml  qwen3.ipynb  qwen3.md  requirements.txt  run_api.cmd
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  (+1 more)
.gitlab/: .gitlab-ci.yml
configs/: default.yaml  dev.yaml  docker.yaml  prod.yaml
docker/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CI_GITHUB_ACTIONS.md  CI_GITLAB.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  FEATURES.md  INSTALLATION.md  MODELS.md  OUTPUTS.md  PIPELINES.md  QUICKSTART.md  README.md  SECURITY.md  STREAMING.md  TASKS.md  TROUBLESHOOTING.md  UI.md  VOICES.md  VTUBER.md  qwen3.ipynb
outputs/: README.md
src/: test_api.py
tests/: README.md  conftest.py  test_config_files.py  test_outputs_folder.py  test_repo_layout.py  test_src_imports_optional.py  test_voice_profiles_schema.py
tools/: README.md  benchmark_latency.py  build_clone_prompt.py  bulk_generate_from_csv.py  check_docker_gpu.py  convert_audio.py  create_voice_profile.py  download_models.py  export_docker_env.py  hotkey_tts.py  list_voices.py  normalize_loudness.py  print_system_info.py  profile_vram.py  srt_to_audio.py  trim_silence.py  verify_models.py  warmup.py  ws_stream_player.py  ws_stream_recorder.py  ws_stream_test_client.py
voices/: README.md
(+76 files in other folders)
